# MTAPI

./: deploy.sh  deployment.yaml  dune-project  flake.nix  index.html  kustomization.yaml  mtaproto.opam  pyproject.toml
.github/workflows/: docs.yaml
mtapi/: _mtapithreader.py  _typing.py  app.py  dune  models.atd  models.py  mtapi.py  test.ml
mtaproto/: __init__.py  dune  feedresponse.py  gtfs_realtime.atd  gtfs_realtime.ml  gtfs_realtime_pb2.py  index.html  mtaproto.ml  nyct_subway.atd  nyct_subway.ml  nyct_subway.proto  nyct_subway_pb2.py  nyct_subway_pb2.pyi  update.sh
mtaproto/Mtaproto/: index.html
mtaproto/Mtaproto/Gtfs_realtime_json/: index.html
mtaproto/Mtaproto/Gtfs_realtime_pb/: index.html
mtaproto/Mtaproto/Gtfs_realtime_pp/: index.html
mtaproto/Mtaproto/Gtfs_realtime_types/: index.html
mtaproto/Mtaproto/Nyct_subway_json/: index.html
mtaproto/Mtaproto/Nyct_subway_pb/: index.html
mtaproto/Mtaproto/Nyct_subway_pp/: index.html
mtaproto/Mtaproto/Nyct_subway_types/: index.html
mtaproto_pbrt/: dune  gtfs_realtime_pb.ml  gtfs_realtime_pb.mli  gtfs_realtime_pp.ml  gtfs_realtime_pp.mli  gtfs_realtime_types.ml  gtfs_realtime_types.mli  mtaproto.ml  nyct_subway_pb.ml  nyct_subway_pb.mli  nyct_subway_pp.ml  nyct_subway_pp.mli  nyct_subway_types.ml  nyct_subway_types.mli
