(executable
 (name test)
 (libraries mtaproto core unix cohttp-lwt-unix jsonaf)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv))
 (flags :standard -w -32)
 (modules test))

; (rule
;  (targets models_j.ml models_j.mli)
;  (deps models.atd (package atdgen))
;  (action  (run atdgen -j -j-std %{deps}))
; )

; (rule
;  (targets models_t.ml models_t.mli)
;  (deps models.atd (package atdgen))
;  (action  (run atdgen -t %{deps}))
; )

(documentation)
